# InfiniCore

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  INFLLMV2_FLASHATTN_LOCAL_WINDOW_PATCH_NOTES.md  PR.md  README.md  __init__.py  a.out  build_fixed.sh  core_2026-01-08_17:47:07.860_mccx_2790503.mudmp  core_2026-01-08_19:12:43.733_mccx_2855686.mudmp  core_2026-01-08_19:50:35.933_mccx_2881178.mudmp  core_2026-01-08_20:07:44.657_mccx_2918926.mudmp  core_2026-01-08_20:32:23.317_mccx_2931498.mudmp  core_2026-01-08_20:54:38.545_mccx_2954869.mudmp  core_2026-01-08_21:04:28.932_mccx_2967468.mudmp  core_2026-01-08_21:15:41.497_mccx_2995510.mudmp  core_2026-01-08_21:18:18.666_mccx_2996759.mudmp  core_2026-01-08_21:48:52.578_mccx_3036206.mudmp  draft.md  example_memory_usage.py  hardtanh_cuda_test  hardtanh_cuda_test.cpp  issue_461_diff_analysis.md  main.py  memory_management_architecture.md  memory_management_critical_analysis.md  plan.md  pyproject.toml  sbatch.sh  setup.py  setup_cudnn_env.sh  setup_infinicore_env.sh  softmin.cpp  softmin_kernel.cu  softshrink.cpp  softshrink_kernel.cu  split.cpp  split_kernel.cu  (+11 more)
docs/: GLM-5.2-W4A8-InfiniCore算子接入进度.md  iluvatar-flash-attn-checklist-vs-pr1119.md
include/: infiniccl.h  infinicore.h  infiniop.h  infinirt.h
moe_gu_ops/: pybind_gumoe.cc  setup.py
scripts/: build_ntops.py  compare_pytorch_operators.py  format.py  install.py  metax_env.py  python_test.py  set_env.py  sync_infiniops.py  test_binary_unary.py  validate_infiniop_nvidia.py
test/: conv1d_test.cpp  qwen3_next_original_conv1d_test.py  (+2 more)
xmake/: ali.lua  (+15 more)
(+3530 files in other folders)
