[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "InfiniCore"
version = "0.1.0"
description = "InfiniCore 是一个跨平台统一编程工具集，为不同芯片平台的功能（包括计算、运行时、通信等）提供统一 C 语言接口。"
readme = "README.md"
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
# Optional vLLM pip stack for benchmark/compare scripts only (MoE fused path is vendored in-tree).
vllm = ["vllm==0.19.0"]
# MiniCPM5 fused MoE + jiuge: Triton + helpers (flash-attn install separately; see InfiniLM/examples/FLASH_ATTN_AND_VLLM_FUSED_MOE.md).
vllm-fused-moe = ["triton>=3.0.0", "janus>=1.0.0", "xxhash>=3.0.0"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/InfiniTensor/InfiniCore"
Issues = "https://github.com/InfiniTensor/InfiniCore/issues"

[tool.ruff]
src = [".", "src"]

[tool.pytest.ini_options]
pythonpath = ["python"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
